--- a/Semana10/storeapp/package.json
+++ b/Semana10/storeapp/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sweetalert2": "^10.15.5",
