--- a/Semana10/storeapp/package.json
+++ b/Semana10/storeapp/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
     "firebase": "^8.2.9",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sweetalert2": "^10.15.5",
