--- a/Semana13/app-angular2/angular.json
+++ b/Semana13/app-angular2/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "app-angular": {
+    "app-angular2": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/app-angular",
+            "outputPath": "dist/app-angular2",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,12 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -64,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app-angular:build"
+            "browserTarget": "app-angular2:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "app-angular:build:production"
+              "browserTarget": "app-angular2:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "app-angular:build"
+            "browserTarget": "app-angular2:build"
           }
         },
         "test": {
@@ -112,16 +109,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "app-angular:serve"
+            "devServerTarget": "app-angular2:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "app-angular:serve:production"
+              "devServerTarget": "app-angular2:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "app-angular"
+  "defaultProject": "app-angular2"
 }
