--- a/Semana13/app-angular2/package.json
+++ b/Semana13/app-angular2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-angular",
+  "name": "app-angular2",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,7 +19,6 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
-    "bootstrap": "^5.0.0-beta2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
